--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -40,6 +40,7 @@ html {
 
     img {
         max-width: 100%;
+        object-fit: contain;
     }
 }
 
