--- a/src/scss/_sponsors.scss
+++ b/src/scss/_sponsors.scss
@@ -27,6 +27,7 @@
 
     img {
         max-height: 100%;
+        width: 300px;
         max-width: 100%;
     }
 }
